fixes grammatical error, gives new wording in-line with the rest of the page.

--- a/multivector.tex
+++ b/multivector.tex
@@ -221,7 +221,7 @@ a multivector is a sum of scalars, vectors, or products of vectors.
 Any k-vector or sum of k-vectors is also a multivector.  Examples:
 \begin{itemize}
 \item
-\(\Be_1 \Be_4, \Be_1 \Be_2 + \Be_2 \Be_3\).  These are bivectors, and is also multivectors with only a grade 2 components.
+\(\Be_1 \Be_4, \Be_1 \Be_2 + \Be_2 \Be_3\).  These are bivectors, and also multivectors with only grade 2 components.
 \item
 \(\Be_1 \Be_2 \Be_3, \Be_2 \Be_3 \Be_4\).  These are trivectors, and also multivectors with only grade 3 components.
 \item
